worked on navbar

--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-proje başladı
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <title>Document</title>
+  </head>
+  <body>
+    <main>
+      <div class="main-content">
+        <header>
+          <div class="menu-bar container d-flex justify-content-between pt-3">
+            <div class="logo">
+              <a href="#">
+                <i class="fa fa-circle" aria-hidden="true"></i>
+                TrackMate
+              </a>
+            </div>
+            <div class="links">
+              <ul>
+                <li><a href="">SSS</a></li>
+                <li>
+                  <a href="">
+                    <i class="fa fa-user-circle pe-2" aria-hidden="true"></i>
+                    Giriş
+                  </a>
+                </li>
+                <li>
+                  <a class=""
+                    ><i class="fa fa-shopping-bag" aria-hidden="true"></i
+                  ></a>
+                </li>
+                <li>
+                  <button class="btn action-btn">Hemen Al</button>
+                </li>
+              </ul>
+            </div>
+            <div class="toggle-btn">
+              <i class="fa fa-bars" aria-hidden="true"></i>
+            </div>
+          </div>
+          <div class="dropdown_menu open">
+            <li><a href="">SSS</a></li>
+            <li>
+              <a href="">
+                <i class="fa fa-user-circle pe-2" aria-hidden="true"></i>
+                Giriş
+              </a>
+            </li>
+            <li>
+              <a class=""
+                ><i class="fa fa-shopping-bag" aria-hidden="true"></i>
+            Sepet</a>
+            </li>
+            <li>
+              <button class="btn action-btn">Hemen Al</button>
+            </li>
+          </div>
+        </header>
+      </div>
+    </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+      integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+      crossorigin="anonymous"
+    ></script>
+    <script  src="./assets/js/index.js"></script>
+  </body>
+</html>
