--- a/index.html
+++ b/index.html
@@ -17,59 +17,68 @@
     <title>Document</title>
   </head>
   <body>
-    <main>
-      <div class="main-content">
-        <header>
-          <div class="menu-bar container d-flex justify-content-between pt-3">
-            <div class="logo">
-              <a href="#">
-                <i class="fa fa-circle" aria-hidden="true"></i>
-                TrackMate
-              </a>
-            </div>
-            <div class="links">
-              <ul>
-                <li><a href="">SSS</a></li>
-                <li>
-                  <a href="">
-                    <i class="fa fa-user-circle pe-2" aria-hidden="true"></i>
-                    Giriş
-                  </a>
-                </li>
-                <li>
-                  <a class=""
-                    ><i class="fa fa-shopping-bag" aria-hidden="true"></i
-                  ></a>
-                </li>
-                <li>
-                  <button class="btn action-btn">Hemen Al</button>
-                </li>
-              </ul>
-            </div>
-            <div class="toggle-btn">
-              <i class="fa fa-bars" aria-hidden="true"></i>
-            </div>
+    <div class="main-content">
+      <header>
+        <div class="menu-bar container d-flex justify-content-between pt-3">
+          <div class="logo">
+            <a href="#">
+              <i class="fa fa-circle" aria-hidden="true"></i>
+              TrackMate
+            </a>
           </div>
-          <div class="dropdown_menu open">
-            <li><a href="">SSS</a></li>
-            <li>
-              <a href="">
-                <i class="fa fa-user-circle pe-2" aria-hidden="true"></i>
-                Giriş
-              </a>
-            </li>
-            <li>
-              <a class=""
-                ><i class="fa fa-shopping-bag" aria-hidden="true"></i>
-            Sepet</a>
-            </li>
-            <li>
-              <button class="btn action-btn">Hemen Al</button>
-            </li>
+          <div class="links">
+            <ul>
+              <li><a href="">SSS</a></li>
+              <li>
+                <a href="">
+                  <i class="fa fa-user-circle pe-2" aria-hidden="true"></i>
+                  Giriş
+                </a>
+              </li>
+              <li>
+                <a class=""
+                  ><i class="fa fa-shopping-bag" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <button class="btn action-btn">Hemen Al</button>
+              </li>
+            </ul>
           </div>
-        </header>
-      </div>
-    </main>
+          <div class="toggle-btn">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+          </div>
+        </div>
+        <div class="dropdown_menu">
+          <li><a href="">SSS</a></li>
+          <li>
+            <a href="">
+              <i class="fa fa-user-circle pe-2" aria-hidden="true"></i>
+              Giriş
+            </a>
+          </li>
+          <li>
+            <a class=""
+              ><i class="fa fa-shopping-bag" aria-hidden="true"></i> Sepet</a
+            >
+          </li>
+          <li>
+            <button class="btn action-btn">Hemen Al</button>
+          </li>
+        </div>
+      </header>
+      <main>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-7 d">
+              <h5>Günlük Rutininizi Yaratın</h5>
+            </div>
+            <div class="col-lg-5 d">deneme</div>
+          </div>
+        </div>
+      </main>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
@@ -80,6 +89,6 @@
       integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
       crossorigin="anonymous"
     ></script>
-    <script  src="./assets/js/index.js"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
