worked on main content

--- a/index.html
+++ b/index.html
@@ -70,15 +70,17 @@
       </header>
       <main>
         <div class="container">
-          <div class="row">
+          <div class="row content d-flex align-items-center">
             <div class="col-lg-7 d">
-              <h4>Günlük Rutininizi Yaratın</h4>
+              <h3>Günlük Rutininizi Yaratın</h3>
               <h1 id="brand">0.4 TrackMate XE</h1>
-              <h4>Her adımınızda sizi motive eden sağlık takip cihazı</h4>
-              <button class="btn action-btn">Hemen Al</button>
+              <h3>Her adımınızda sizi motive eden sağlık takip cihazı</h3>
+              <button class="btn action-btn mt-3">Hemen Al</button>
 
             </div>
-            <div class="col-lg-5 d">deneme</div>
+            <div class="col-lg-5 d product">
+              <img src="./assets/medias/main-photo.webp" alt="">
+            </div>
           </div>
         </div>
       </main>
