worked on main content

--- a/index.html
+++ b/index.html
@@ -78,12 +78,27 @@
               <button class="btn action-btn mt-3">Hemen Al</button>
 
             </div>
-            <div class="col-lg-5 d product">
+            <div class="col-lg-5 product">
               <img src="./assets/medias/main-photo.webp" alt="">
             </div>
           </div>
         </div>
       </main>
+      <section>
+        <div class="container-fluid mt-5 exercise">
+          <div class="row d-flex justify-content-between">
+            <div class="col-lg-7 mb-3 train">
+              <div>
+                <img src="./assets/medias/icon 2.webp" alt="">
+                <span>EGZERSİZ TAKİBİ</span>
+              </div>
+            </div>
+            <div class="col-lg-4 gradient d-flex align-items-center justify-content-center" >
+              <img src="./assets/medias/phone.webp" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
     <script
