--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <div class="main-content">
       <header>
-        <div class="menu-bar container d-flex justify-content-between pt-3 mb-5">
+        <div
+          class="menu-bar container d-flex justify-content-between pt-3 mb-5"
+        >
           <div class="logo">
             <a href="#">
               <i class="fa fa-circle" aria-hidden="true"></i>
@@ -76,10 +78,9 @@
               <h1 id="brand">0.4 TrackMate XE</h1>
               <h3>Her adımınızda sizi motive eden sağlık takip cihazı</h3>
               <button class="btn action-btn mt-3">Hemen Al</button>
-
             </div>
             <div class="col-lg-5 product">
-              <img src="./assets/medias/main-photo.webp" alt="">
+              <img src="./assets/medias/main-photo.webp" alt="" />
             </div>
           </div>
         </div>
@@ -87,14 +88,26 @@
       <section>
         <div class="container-fluid mt-5 exercise">
           <div class="row d-flex justify-content-between">
-            <div class="col-lg-7 mb-3 train">
-              <div>
-                <img src="./assets/medias/icon 2.webp" alt="">
+            <div class="col-lg-7 mb-3 train d-flex align-items-center">
+              <div class="ms-5 col-lg-6">
+                <img src="./assets/medias/icon 2.webp" alt="" />
                 <span>EGZERSİZ TAKİBİ</span>
+                <h1>
+                  Doğru Egzersiz <br />
+                  İstatistikleriyle <br />
+                  Rutininizi Ayarlayın
+                </h1>
+                <p class="pt-4">
+                  Bu, bir paragraf. Kendi metninizi eklemek için tıklayın.
+                  İçeriğinizi eklemek ve yazı tipini değiştirmek için “Metni
+                  Düzenle”ye tek tıklayın veya buraya çift tıklayın.
+                </p>
               </div>
             </div>
-            <div class="col-lg-4 gradient d-flex align-items-center justify-content-center" >
-              <img src="./assets/medias/phone.webp" alt="">
+            <div
+              class="col-lg-4 gradient d-flex align-items-center justify-content-center"
+            >
+              <img src="./assets/medias/phone.webp" alt="" />
             </div>
           </div>
         </div>
@@ -112,6 +125,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/js/index.js"></script>
-    
   </body>
 </html>
