--- a/index.html
+++ b/index.html
@@ -88,10 +88,12 @@
       <section>
         <div class="container-fluid mt-5 exercise">
           <div class="row d-flex justify-content-between">
-            <div class="col-lg-7 mb-3 train d-flex align-items-center">
+            <div
+              class="col-lg-7 mb-3 train background d-flex align-items-center"
+            >
               <div class="ms-5 col-lg-6">
                 <img src="./assets/medias/icon 2.webp" alt="" />
-                <span>EGZERSİZ TAKİBİ</span>
+                <span class="ps-3">EGZERSİZ TAKİBİ</span>
                 <h1>
                   Doğru Egzersiz <br />
                   İstatistikleriyle <br />
@@ -108,6 +110,31 @@
               class="col-lg-4 gradient d-flex align-items-center justify-content-center"
             >
               <img src="./assets/medias/phone.webp" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="notification container-fluid mt-5">
+          <div class="row d-flex justify-content-between">
+           
+            <div class="col-lg-7 mb-3 n-system background d-flex justify-content-center align-items-center">
+              <div class="ms-5 col-lg-6">
+                <img src="./assets/medias/icon 1.webp" alt="" />
+                <span class="ps-3">BİLDİRİM SİSTEMİ</span>
+                <h1>
+                  Programa Uymanız <br />
+                  için Hatırlatmalar
+                </h1>
+                <p class="pt-4">
+                  Bu, bir paragraf. Kendi metninizi eklemek için tıklayın.
+                  İçeriğinizi eklemek ve yazı tipini değiştirmek için “Metni
+                  Düzenle”ye tek tıklayın veya buraya çift tıklayın.
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-4 gradient d-flex align-items-center justify-content-center">
+              <img src="./assets/medias/3 fold image.webp" alt="" />
             </div>
           </div>
         </div>
