bracelets section completed

--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
       <section>
         <div class="notification container-fluid mt-5">
           <div class="row d-flex justify-content-between">
-           
-            <div class="col-lg-7 mb-3 n-system background d-flex justify-content-center align-items-center">
+            <div
+              class="col-lg-7 mb-3 n-system background d-flex justify-content-center align-items-center"
+            >
               <div class="ms-5 col-lg-6">
                 <img src="./assets/medias/icon 1.webp" alt="" />
                 <span class="ps-3">BİLDİRİM SİSTEMİ</span>
@@ -133,9 +134,27 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 gradient d-flex align-items-center justify-content-center">
+            <div
+              class="col-lg-4 gradient d-flex align-items-center justify-content-center"
+            >
               <img src="./assets/medias/3 fold image.webp" alt="" />
             </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="bracelets d-flex justify-content-center align-items-center mt-5">
+          <div>
+            <div class="d-flex justify-content-center pb-4">
+              <img src="./assets/medias/icon 3.webp" alt="" />
+            </div>
+            <h1>Tarzınıza Uygun Kayış Seçenekleri</h1>
+            <p class="pt-4">
+              Bu, bir paragraf. Kendi metninizi eklemek için tıklayın.
+              İçeriğinizi eklemek ve yazı tipini değiştirmek <br> için “Metni
+              Düzenle”ye tek tıklayın veya buraya çift tıklayın.
+            </p>
+            <img class="products" src="./assets/medias/shutterstock_1521991916 edited.webp" alt="">
           </div>
         </div>
       </section>
