Scroll effect made with parallax

--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
                 </p>
               </div>
             </div>
-            <div
-              class="col-lg-4 gradient d-flex align-items-center justify-content-center"
-            >
+            <div class="col-lg-4 gradient d-flex align-items-center justify-content-center">
               <img src="./assets/medias/phone.webp" alt="" />
             </div>
           </div>
@@ -165,6 +163,26 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="container-fluid">
+          <div class="w-system mt-5 row parallax-window  d-flex ps-5 align-items-center" data-parallax="scroll" data-image-src="./assets/medias/fachry-zella-devandra-Yta-zdP9PVM-unsplash.jpg">
+            <div class=" pb-4 col-lg-3">
+              <img src="./assets/medias/icon4.webp" alt="" />
+              <span class="ps-3">UYARI SİSTEMİ</span>
+              <h1>
+                Bedeniniz Size <br> Rehberlik Etsin
+              </h1>
+              <p class="pt-4">
+                Bu, bir paragraf. Kendi metninizi eklemek için tıklayın.
+                İçeriğinizi eklemek ve yazı tipini değiştirmek için “Metni
+                Düzenle”ye tek tıklayın veya buraya çift tıklayın.
+              </p>
+            </div>
+          </div>
+        </div>
+        
+        
+      </section>
     </div>
 
     <script
@@ -178,7 +196,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js" integrity="sha512-ZKNVEa7gi0Dz4Rq9jXcySgcPiK+5f01CqW+ZoKLLKr9VMXuCsw3RjWiv8ZpIOa0hxO79np7Ec8DDWALM0bDOaQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+    <script src="/node_modules/jquery-parallax.js/parallax.js"></script>
     <script src="./assets/js/index.js"></script>
   </body>
 </html>
