--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <section>
         <div class="container-fluid">
           <div class="w-system mt-5 row parallax-window  d-flex ps-5 align-items-center" data-parallax="scroll" data-image-src="./assets/medias/fachry-zella-devandra-Yta-zdP9PVM-unsplash.jpg">
-            <div class=" pb-4 col-lg-3">
+            <div class=" pb-4 col-lg-4">
               <img src="./assets/medias/icon4.webp" alt="" />
               <span class="ps-3">UYARI SİSTEMİ</span>
               <h1>
@@ -180,8 +180,14 @@
             </div>
           </div>
         </div>
-        
-        
+      </section>
+      <section>
+        <div class="t-feature mt-5 d-flex align-items-center justify-content-center">
+          <div class="container">
+            <h1 class="pb-5 pt-5">0.4 TrackMate XE Teknik Özellikler</h1>
+            <img class="col-lg-6 animate-img col-6" src="./assets/medias/shutterstock_1523629793edited.webp" alt="">         
+          </div>
+        </div>
       </section>
     </div>
 
