--- a/index.html
+++ b/index.html
@@ -182,11 +182,57 @@
         </div>
       </section>
       <section>
-        <div class="t-feature mt-5 d-flex align-items-center justify-content-center">
-          <div class="container">
+        <div class="t-feature">
+          <div>
             <h1 class="pb-5 pt-5">0.4 TrackMate XE Teknik Özellikler</h1>
-            <img class="col-lg-6 animate-img col-6" src="./assets/medias/shutterstock_1523629793edited.webp" alt="">         
+            <div class="d-flex justify-content-center container-fluid">
+              <div class="d-flex align-items-baseline justify-content-between box-container row col-lg-7">
+                <div class="box col-lg-5">
+                  <div class="d-flex align-items-center pt-3 pb-3">
+                    <img src="./assets/medias/icon 6.webp" alt="">
+                    <h4 class="ps-2">20 Saat Pil Ömrü</h4>
+                  </div>
+                  <p class="text-start pt-3">
+                    20 Saat Pil Ömrü
+                    Bu, bir paragraf. Kendi metninizi eklemek için tıklayın.
+                  </p>
+                </div>
+                <div class="box mb-5 col-lg-5">
+                  <div class="d-flex align-items-center pt-3 pb-3">
+                    <img src="./assets/medias/icon 8.webp" alt="">
+                    <h4 class="ps-2">Bluetooth Bağlantısı</h4>
+                  </div>
+                  <p class="text-start pt-2">
+                    20 Saat Pil Ömrü
+                    Bu, bir paragraf. Kendi metninizi eklemek için tıklayın.
+                  </p>
+                </div>
+                <div class="box mb-5 col-lg-5">
+                  <div class="d-flex align-items-center pt-3 pb-3">
+                    <img src="./assets/medias/icon 9.webp" alt="">
+                    <h4 class="ps-2">Kablosuz Şarj</h4>
+                  </div>
+                  <p class="text-start pt-2">
+                    20 Saat Pil Ömrü
+                    Bu, bir paragraf. Kendi metninizi eklemek için tıklayın.
+                  </p>
+                </div>
+                <div class="box col-lg-5">
+                  <div class="d-flex align-items-center pt-3 pb-3">
+                    <img src="./assets/medias/icon 7.webp" alt="">
+                    <h4 class="ps-2">
+                      Suya Dayanıklılık</h4>
+                  </div>
+                  <p class="text-start pt-2">
+                    20 Saat Pil Ömrü
+                    Bu, bir paragraf. Kendi metninizi eklemek için tıklayın.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <img class="col-lg-6 mt-3 animate-img col-6" src="./assets/medias/shutterstock_1523629793edited.webp" alt="">    
           </div>
+          <button class="btn action-btn mt-3 mb-5">Hemen Al</button> 
         </div>
       </section>
     </div>
