--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <h1 class="pb-5 pt-5">0.4 TrackMate XE Teknik Özellikler</h1>
             <div class="d-flex justify-content-center container-fluid">
               <div class="d-flex align-items-baseline justify-content-between box-container row col-lg-7">
-                <div class="box col-lg-5">
+                <div class="box col-lg-5 mb-5">
                   <div class="d-flex align-items-center pt-3 pb-3">
                     <img src="./assets/medias/icon 6.webp" alt="">
                     <h4 class="ps-2">20 Saat Pil Ömrü</h4>
@@ -233,6 +233,29 @@
             <img class="col-lg-6 mt-3 animate-img col-6" src="./assets/medias/shutterstock_1523629793edited.webp" alt="">    
           </div>
           <button class="btn action-btn mt-3 mb-5">Hemen Al</button> 
+        </div>
+      </section>
+      <section>
+        <div class="card-container container mt-5">
+          <div class="row d-flex justify-content-around">
+            <div class="col-lg-5 card-section ">
+              <div class="card-info col-lg-4">
+                <div class="d-flex justify-content-center">
+                  <img src="./assets/medias/icon 5.webp" alt="">
+                  <h2>KENDİNİZİ DAHA FAZLA KEŞFEDİN</h2>
+                </div>
+              </div>
+              <img class="card-image" src="./assets/medias/cassandra-hamer-PwSRfJWqUqs-unsplash.jpg" alt="">
+            </div>
+            <div class="col-lg-5 card-section ">
+              <div class="card-info col-lg-4">
+                <div class="d-flex justify-content-center">
+                  <img src="./assets/medias/icon 6 (1).webp" alt="">
+                </div>
+              </div>
+              <img class="card-image" src="./assets/medias/ale-romo-TdrUCJU6VFs-unsplash.jpg" alt="">
+            </div>
+          </div>
         </div>
       </section>
     </div>
