--- a/index.html
+++ b/index.html
@@ -239,19 +239,22 @@
         <div class="card-container container mt-5">
           <div class="row d-flex justify-content-around">
             <div class="col-lg-5 card-section ">
-              <div class="card-info col-lg-4">
-                <div class="d-flex justify-content-center">
+              <div class="card-info col-12 col-lg-4 text-center">
+                <div class="d-flex justify-content-center pb-4">
                   <img src="./assets/medias/icon 5.webp" alt="">
-                  <h2>KENDİNİZİ DAHA FAZLA KEŞFEDİN</h2>
                 </div>
+                <h6 class="pb-4">KENDİNİZİ DAHA FAZLA KEŞFEDİN</h6>
+                <h1>Uykunuzu Takip <br> Edin</h1>
               </div>
               <img class="card-image" src="./assets/medias/cassandra-hamer-PwSRfJWqUqs-unsplash.jpg" alt="">
             </div>
-            <div class="col-lg-5 card-section ">
-              <div class="card-info col-lg-4">
-                <div class="d-flex justify-content-center">
+            <div class="col-lg-5 text-center card-section ">
+              <div class="card-info col-lg-4 col-12">
+                <div class="d-flex justify-content-center pb-4">
                   <img src="./assets/medias/icon 6 (1).webp" alt="">
                 </div>
+                <h6 class="pb-4">DERİN BİR NEFES ALIN</h6>
+                <h1>Rehberli Meditasyonla <br> Mola Verin</h1>
               </div>
               <img class="card-image" src="./assets/medias/ale-romo-TdrUCJU6VFs-unsplash.jpg" alt="">
             </div>
