section buy-trackmate completed

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </div>
       </section>
       <section>
-        <div class="card-container container mt-5">
+        <div class="card-container container mt-5 mb-5">
           <div class="row d-flex justify-content-around">
             <div class="col-lg-5 card-section ">
               <div class="card-info col-12 col-lg-4 text-center">
@@ -259,6 +259,27 @@
               <img class="card-image" src="./assets/medias/ale-romo-TdrUCJU6VFs-unsplash.jpg" alt="">
             </div>
           </div>
+        </div>
+      </section>
+      <section>
+        <div class="buy-trackmate mt-5">
+          <div class="text-center">
+            <div class="d-flex justify-content-center pb-4">
+              <img src="./assets/medias/icon 4.webp" alt="" />
+            </div>
+            <h6 class="pb-4">HAYATINIZI DEĞİŞTİRECEK CİHAZ</h6>
+            <h1>Bugün 0.4 TrackMate XE Cihazınızı Alın</h1>
+            <button class="btn action-btn mt-3 mb-5">Hemen Al</button> 
+            <div>
+              <img class="bracelet-img" src="./assets/medias/shutterstock_1523165789.webp" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="text-center mt-5 subscribe">
+          <h1>Abone Olun ve ilk Alışverişinizde <br> 
+            %15 İndirim Kazanın</h1>
         </div>
       </section>
     </div>
