subscribe section completed

--- a/index.html
+++ b/index.html
@@ -277,11 +277,22 @@
         </div>
       </section>
       <section>
-        <div class="text-center mt-5 subscribe">
-          <h1>Abone Olun ve ilk Alışverişinizde <br> 
-            %15 İndirim Kazanın</h1>
+        <div class=" d-flex justify-content-center align-items-center container mt-5 subscribe">
+          <div class=" col-lg-9 col-12">
+            <h1>Abone Olun ve ilk Alışverişinizde <br> 
+              %15 İndirim Kazanın
+            </h1>
+            <div class="input-group mt-5 mb-3">
+              <input type="text" class="form-control" placeholder="Kayıt olun" aria-label="Kayıt olun" aria-describedby="button-addon2">
+              <button class="btn action-btn" type="button" id="button-addon2">Abone Ol</button>
+            </div>
+          </div>
+          
         </div>
       </section>
+      <footer>
+        
+      </footer>
     </div>
 
     <script
