--- a/index.html
+++ b/index.html
@@ -291,7 +291,45 @@
         </div>
       </section>
       <footer>
-        
+        <div class="container-fluid footer">
+          <div class="social-media row">
+            <div class="links d-flex justify-content-around align-items-center">
+              <div class="col-lg-4">
+                <ul class="d-flex justify-content-around">
+                  <li><a href="">Instagram</a></li>
+                  <li><a href="">Facebook</a></li>
+                  <li><a href="">Twitter</a></li>
+                  <li><a href="">Tiktok</a></li>
+                  <li><a href="">YouTube</a></li>
+                </ul>
+                <hr>
+              </div>
+              <div class="col-lg-5">
+                <ul class="d-flex justify-content-around">
+                  <li><a href="">Şart ve Koşullar</a></li>
+                  <li><a href="">Gönderim Politikası</a></li>
+                  <li><a href="">Gizlilik Politikası</a></li>
+                  <li><a href="">Çerez Politikası</a></li>
+                </ul>
+                <hr>
+              </div>
+            </div>
+            <div class="d-flex row credit-card justify-content-around">
+              <span class="text-start col-lg-3">Coded by Esma Nur Uzun</span>
+              <ul class="d-flex col-lg-5 justify-content-evenly">
+                <li><img src="./assets/medias/PayPal.webp" alt=""></li>
+                <li><img src="./assets/medias/brand-amex_3x.webp" alt=""></li>
+                <li><img src="./assets/medias/brand-chinaunionpay_3x.webp" alt=""></li>
+                <li><img src="./assets/medias/brand-jcb_3x.webp" alt=""></li>
+                <li><img src="./assets/medias/brand-mastercard_3x.webp" alt=""></li>
+                <li><img src="./assets/medias/Diners.webp" alt=""></li>
+                <li><img src="./assets/medias/Discover.webp" alt=""></li>
+                <li><img src="./assets/medias/Visa.webp" alt=""></li>
+              </ul>
+            </div>
+          </div>
+         
+        </div>
       </footer>
     </div>
 
