--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       <footer>
         <div class="container-fluid footer">
           <div class="social-media row">
-            <div class="links d-flex justify-content-around align-items-center">
+            <div class="links d-flex justify-content-around align-items-end">
               <div class="col-lg-4">
                 <ul class="d-flex justify-content-around">
                   <li><a href="">Instagram</a></li>
