--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       
     />
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <!-- <script src="./node_modules/jquery/dist/jquery.js"></script> -->
+    <script src="./node_modules/jquery/dist/jquery.js"></script>
     
     <title>Document</title>
   </head>
