--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       
     />
-    <script src="./node_modules/jquery/dist/jquery.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     
     <title>Document</title>
   </head>
