--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       </section>
       <section>
         <div class="container-fluid">
-          <div class="w-system mt-5 row parallax-window  d-flex ps-5 align-items-center" data-parallax="scroll" data-image-src="./assets/medias/fachry-zella-devandra-Yta-zdP9PVM-unsplash.jpg">
+          <div class="w-system mt-5 row  d-flex ps-5 align-items-center" ">
             <div class=" pb-4 col-lg-4">
               <img src="./assets/medias/icon4.webp" alt="" />
               <span class="ps-3">UYARI SİSTEMİ</span>
